--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "d021a846-d62b-437a-a373-affd3d1369ec"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
